@@ -1,3 +1,6 @@
+HEAD
+	+ Added breadcrumbs to allowed applications in User Defined
+ 	  Permission Templates
 1.3.15
 	+ Bug fix: do not i18nify DefaultApplications table name
 1.3.14
